@@ -386,6 +386,10 @@ pm-beryllium-sulfate=Beryllium sulfate
 pm-beryl=Beryl
 pm-beryl-powder=Beryl powder
 pm-copper-heating-coil=Copper heating coil
+pm-silver-heating-coil=Silver heating coil
+pm-tungsten-heating-coil=Tungsten heating coil
+pm-aluminium-heating-coil=Aluminium heating coil
+pm-kasethal-heating-coil=Kasethal heating coil
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
@@ -517,6 +521,7 @@ pm-bio-wall=A wall infused with alien bacteria, able to regenerate itself after 
 pm-hub-beacon=Transmits module effects to nearby entities. Has a very wide effect range and a slower loss of efficency compared to normal beacons, but is larger and with a lower distribution efficiency and a higher energy usage.
 pm-proximity-beacon=Transmits module effects to nearby entities. Has a very small effect range, a quick loss of efficency and a high distribution efficiency. It is also smaller then normal beacons.
 electric-furnace=Requires heating coils to be placed inside the machine, to work at normal speed.
+pm-electric-furnace-2=Requires heating coils to be placed inside the macine, to work at normal speed.
 
 pm-heat-pipe-1=[color=255,230,192][font=default-semibold]Max temperature:[/font][/color] 500°C 
 heat-pipe=[color=255,230,192][font=default-semibold]Max temperature:[/font][/color] 750°C
